--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <label for="jelszo">Jelszó: </label> <br>
         <input type="text" id="pass" name="pass" value=" "> <br><br>
     </form>
+    <form>
+          <input type="checkbox" id="TT" name="true" value="">
+           <label for="TT">Elfogadom a feltételeket</label><br><br>
+    </form>
 
     <button onclick="check()">Belépés</button>
 </body>
